--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div class="btn" id="divide">/</div>
             </div>
         </div>
-        <script src="./JS/script.js"></script>
+        <script src="script.js"></script>
 </body>
 
 </html>
